# stock-exchange

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
clients/simulator/: main.py
clients/tui/: __main__.py  api.py  app.py  config.py  models.py  tui.tcss
clients/tui/screens/: help_screen.py  main_screen.py
clients/tui/widgets/: market_watch.py  open_orders.py  order_book.py  order_entry.py  order_history.py  portfolio.py  trade_tape.py
docs/: architecture.md  lob_concepts_review.md
exchange/: main.py
infra/docker/: Dockerfile  compose.infra.yml  compose.services.yml  compose.yml
scripts/: dev-tmux.sh  seed.py  validate_trade.py
services/account/: __main__.py  app.py  outbox_relay.py  outbox_repo.py  repository.py  service.py  tables.py
services/account/tests/: test_service.py
services/clearing/: __main__.py  app.py  repository.py  schemas.py  service.py  tables.py
services/clearing/tests/: test_service.py
services/gateway/: __main__.py  app.py  auth.py  dependencies.py  schemas.py
services/gateway/routes/: accounts.py  instruments.py  market_data.py  orders.py
services/market_data/: __main__.py  app.py  schemas.py  service.py
services/market_data/tests/: test_service.py
services/matching_engine/: __main__.py  app.py  engine.py  matching.py  order_book.py  outbox_relay.py  outbox_repo.py  schemas.py  tables.py
services/matching_engine/tests/: test_engine.py
services/notifications/: __main__.py  app.py  repository.py  service.py  tables.py
services/notifications/tests/: test_service.py
services/order_management/: __main__.py  app.py  outbox_relay.py  outbox_repo.py  repository.py  schemas.py  service.py  tables.py
services/order_management/tests/: test_outbox.py  test_service.py
services/risk_engine/: __main__.py  app.py  checks.py  engine.py  repository.py  schemas.py  tables.py
services/risk_engine/tests/: test_engine.py
shared/: README.md  http_client.py  request_context.py  schemas.py  service_clients.py
shared/db/: connection.py  repositories.py  tables.py
shared/db/repos/: __init__.py  accounts.py  instruments.py  orders.py  outbox.py  trades.py
shared/domain/: api_schemas.py  events.py  models.py
shared/events/: bus.py
shared/models/: domain.py
shared/platform/: http_client.py
shared/platform/clients/: account.py  clearing.py  converters.py  market_data.py  matching_engine.py  notifications.py  order_management.py  risk_engine.py
shared/platform/db/: connection.py  tables.py
tests/: test_integration.py  test_persistence.py
